add testing infrastructure and default tests