@@ -15,7 +15,11 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.7</java.version>
 		<spring.version>4.0.3.RELEASE</spring.version>
+        <jackson.version>1.9.10</jackson.version>
 		<!--<cglib.version>2.2.2</cglib.version>-->
+        <surefire.version>2.17</surefire.version>
+        <skipTests>false</skipTests>
+        <skipITs>true</skipITs>
 	</properties>
 
 	<dependencies>
@@ -57,19 +61,12 @@
             </exclusions>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<version>${spring.version}</version>
-			<type>jar</type>
-			<scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>commons-logging</groupId>
-                    <artifactId>commons-logging</artifactId>
-                </exclusion>
-            </exclusions>
-		</dependency>
+        <!-- json with jackson -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
 
 		<!-- Servlet Spec -->
         <dependency>
@@ -100,6 +97,44 @@
             <version>1.2.17</version>
         </dependency>
 
+        <!-- testing -->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>hamcrest-core</artifactId>
+                    <groupId>org.hamcrest</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+            <type>jar</type>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
 
     </dependencies>
@@ -148,6 +183,56 @@
                     </httpConnector>
                     <scanIntervalSeconds>10</scanIntervalSeconds>
                 </configuration>
+            </plugin>
+
+            <!-- Unit Testing -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.version}</version>
+                <configuration>
+                    <groups>org.socialmoms.config.UnitTest</groups>
+                    <excludedGroups>org.socialmoms.config.IntegrationTest</excludedGroups>
+                    <skipTests>${skipTests}</skipTests>
+                    <failIfNoTests>true</failIfNoTests>
+                    <useManifestOnlyJar>false</useManifestOnlyJar>
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
+                    <forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                    <systemPropertyVariables>
+                        <java.awt.headless>true</java.awt.headless>
+                        <NSProjectBundleEnabled>true</NSProjectBundleEnabled>
+                        <NSMavenTestPathsEnabled>true</NSMavenTestPathsEnabled>
+                        <ApplicationName>${project.name}</ApplicationName>
+                    </systemPropertyVariables>
+                    <parallel>classes</parallel>
+                    <threadCount>4</threadCount>
+                    <argLine>-XX:-UseSplitVerifier -Xmx2048m -Xms1024m</argLine>
+                </configuration>
+            </plugin>
+
+            <!-- Integration Testing -->
+            <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${surefire.version}</version>
+                <configuration>
+                    <groups>org.socialmoms.config.IntegrationTest</groups>
+                    <failIfNoTests>false</failIfNoTests>
+                    <skipITs>${skipITs}</skipITs>
+                    <skipTests>${skipITs}</skipTests>
+                    <argLine>-XX:-UseSplitVerifier -Xmx2048m -Xms1024m -XX:MaxPermSize=128m</argLine>
+                    <test>**/*.java</test>
+                    <forkMode>always</forkMode>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <!-- JGitFlow plugin -->
